# rminidisc

./: .gitignore  AGENTS.md  Cargo.toml  PORTING_REFERENCE.md  README.md  TODO.md  UNPORTED.md
crates/md-pcm/: Cargo.toml
crates/md-pcm/src/: decoder.rs  error.rs  lib.rs  output.rs  resample.rs
crates/minidisc-audio/src/: error.rs  lib.rs
crates/minidisc-cli/: Cargo.toml
crates/minidisc-cli/src/: main.rs  tui.rs
crates/netmd/: Cargo.toml
crates/netmd/src/: commands.rs  crypto.rs  descriptor.rs  device.rs  disc.rs  ekb.rs  error.rs  groups.rs  lib.rs  playback.rs  query.rs  scan.rs  secure.rs  status.rs  title.rs  track.rs  track_info.rs  transport.rs  types.rs  util.rs  wav.rs
crates/rminidisc/: Cargo.toml
crates/rminidisc/src/: logbuf.rs  main.rs  tui.rs
docs/: CORE_TODO.md  UNPORTED.md
minidisc-audio/: Cargo.toml
minidisc-audio/src/: lib.rs  output.rs
minidisc-cli/: Cargo.toml
minidisc-cli/src/: main.rs  tui.rs
netmd/: Cargo.toml
netmd/src/: commands.rs  crypto.rs  descriptor.rs  device.rs  disc.rs  ekb.rs  error.rs  lib.rs  playback.rs  query.rs  scan.rs  secure.rs  status.rs  title.rs  track.rs  track_info.rs  transport.rs  types.rs  util.rs  wav.rs
rmd/: Cargo.toml
rmd-audio/: Cargo.toml
rmd-audio/src/: decoder.rs  lib.rs  resample.rs
rmd/src/: logbuf.rs  main.rs  tui.rs
src/: descriptor.rs  main.rs  query.rs  scan.rs  tt.rs  types.rs  util.rs
