[workspace]
members = ["netmd", "rmd"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.102"
encoding_rs = "0.8.35"
env_logger = "0.11.10"
log = "0.4.32"
rusb = "0.9.4"
unicode-normalization = "0.1.24"
des = "0.8.1"
cbc = "0.1.2"
ecb = "0.1.2"
cipher = "0.4.4"
rand = "0.8.5"
ratatui = "0.29.0"
crossterm = "0.28.1"
lofty = "0.24.0"
clap = { version = "4", features = ["derive"] }
