[package]
name = "netmd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
encoding_rs = { workspace = true }
log = { workspace = true }
rusb = { workspace = true }
unicode-normalization = { workspace = true }
des = { workspace = true }
cbc = { workspace = true }
ecb = { workspace = true }
cipher = { workspace = true }
rand = { workspace = true }
