[package]
name = "rmd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rmd"
path = "src/main.rs"

[dependencies]
netmd = { path = "../netmd" }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
lofty = { workspace = true }
rusb = { workspace = true }
