[package]
name = "minidisc-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "minidisc-cli"
path = "src/main.rs"

[dependencies]
netmd = { path = "../netmd" }
minidisc-audio = { path = "../minidisc-audio" }
anyhow = "1.0.102"
env_logger = "0.11.10"
log = "0.4.32"
ratatui = "0.29.0"
crossterm = "0.28.1"
lofty = "0.24.0"
rusb = "0.9.4"
clap = { version = "4", features = ["derive"] }
atracdenc = { path = "../../../atracdenc-codex/crates/atracdenc" }
