[package]
name = "rminidisc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rminidisc"
path = "src/main.rs"

[dependencies]
netmd = { path = "../netmd" }
md-pcm = { path = "../md-pcm" }
anyhow = "1.0.102"
env_logger = "0.11.10"
log = "0.4.32"
ratatui = "0.29.0"
crossterm = "0.28.1"
lofty = "0.24.0"
clap = { version = "4", features = ["derive"] }
atracdenc = { git = "https://github.com/liangchunn/atracdenc-rs", tag = "v0.1.0" }
tempfile = "3.23.0"
